--- a/sharc/campaigns/imt_dl_ras_10000_MHz/input/imt_dl_ras.ini
+++ b/sharc/campaigns/imt_dl_ras_10000_MHz/input/imt_dl_ras.ini
@@ -7,7 +7,7 @@ num_snapshots = 100
 imt_link = DOWNLINK
 ###########################################################################
 # The chosen system for sharing study
-# EESS_PASSIVE, FSS_SS, FSS_ES, FS, RAS,
+# EESS_PASSIVE, FSS_SS, FSS_ES, FS, RAS
 system = RAS
 ###########################################################################
 # Compatibility scenario (co-channel and/or adjacent channel interference)
@@ -19,17 +19,18 @@ seed = 101
 ###########################################################################
 # if FALSE, then a new output directory is created
 overwrite_output = FALSE
+###########################################################################
 # output destination folder - this is relative SHARC/sharc directory
-output_dir = campaigns/imt_hibs_ras_2600_MHz/output/
+output_dir = campaigns/imt_dl_ras_10000_MHz/output/
 ###########################################################################
 # output folder prefix
-output_dir_prefix = output_imt_hibs_ras_2600_MHz_500km
+output_dir_prefix = imt_dl_ras
 
 [IMT]
 ###########################################################################
 # Network topology. Possible values are "MACROCELL", "HOTSPOT", "SINGLE_BS"
 # "INDOOR"
-topology = NTN
+topology = HOTSPOT
 ###########################################################################
 # Enable wrap around. Available only for "MACROCELL" and "HOTSPOT" topologies
 wrap_around = FALSE
@@ -38,10 +39,10 @@ wrap_around = FALSE
 num_clusters = 1
 ###########################################################################
 # Inter-site distance in macrocell network topology [m]
-intersite_distance = 155884
+intersite_distance = 1595.78
 ###########################################################################
 # Minimum 2D separation distance from BS to UE [m]
-minimum_separation_distance_bs_ue = 0.5
+minimum_separation_distance_bs_ue = 0
 ###########################################################################
 # Defines if IMT service is the interferer or interfered-with service
 #   TRUE  : IMT suffers interference
@@ -49,10 +50,10 @@ minimum_separation_distance_bs_ue = 0.5
 interfered_with = FALSE
 ###########################################################################
 # IMT center frequency [MHz]
-frequency = 2680
+frequency = 10250
 ###########################################################################
 # IMT bandwidth [MHz]
-bandwidth = 20
+bandwidth = 100
 ###########################################################################
 # IMT resource block bandwidth [MHz]
 rb_bandwidth = 0.180
@@ -61,7 +62,7 @@ rb_bandwidth = 0.180
 #   "IMT-2020" : for mmWave as described in ITU-R TG 5/1 Contribution 36
 #   "3GPP E-UTRA" : for E-UTRA bands > 1 GHz as described in 
 #                   TS 36.104 v11.2.0 (BS) and TS 36.101 v11.2.0 (UE)
-spectral_mask = 3GPP E-UTRA
+spectral_mask = IMT-2020
 ###########################################################################
 # level of spurious emissions [dBm/MHz]
 spurious_emissions = -13
@@ -74,22 +75,22 @@ guard_band_ratio = 0.1
 # The load probability (or activity factor) models the statistical
 # variation of the network load by defining the number of fully loaded
 # base stations that are simultaneously transmitting
-bs_load_probability = 1
+bs_load_probability = .2
 ###########################################################################
 # Conducted power per antenna element [dBm/bandwidth]
-bs_conducted_power = 37
+bs_conducted_power = 16
 ###########################################################################
 # Base station height [m]
-bs_height = 20000
+bs_height = 6
 ###########################################################################
 # Base station noise figure [dB]
-bs_noise_figure = 5
+bs_noise_figure = 10
 ###########################################################################
 # User equipment noise temperature [K]
 bs_noise_temperature = 290
 ###########################################################################
 # Base station array ohmic loss  [dB]
-bs_ohmic_loss = 2
+bs_ohmic_loss = 0
 ###########################################################################
 # Uplink attenuation factor used in link-to-system mapping
 ul_attenuation_factor = 0.4
@@ -108,10 +109,10 @@ ue_k = 3
 # of UE's will distributed throughout ths system area such that the number
 # of K users is allocated to each cell. Normally, this values varies
 # between 2 and 10 according to the user drop method
-ue_k_m = 1
+ue_k_m = 10
 ###########################################################################
 # Percentage of indoor UE's [%]
-ue_indoor_percent = 0
+ue_indoor_percent = 5
 ###########################################################################
 # Regarding the distribution of active UE's over the cell area, this
 # parameter states how the UEs will be distributed
@@ -140,7 +141,7 @@ ue_distribution_azimuth = NORMAL
 ue_tx_power_control = ON
 ###########################################################################
 # Power per RB used as target value [dBm]
-ue_p_o_pusch = -91
+ue_p_o_pusch = -95
 ###########################################################################
 # Alfa is the balancing factor for UEs with bad channel
 # and UEs with good channel
@@ -157,16 +158,16 @@ ue_power_dynamic_range = 63
 ue_height = 1.5
 ###########################################################################
 # User equipment noise figure [dB]
-ue_noise_figure = 9
+ue_noise_figure = 10
 ###########################################################################
 # User equipment feed loss [dB]
-ue_ohmic_loss = 3
+ue_ohmic_loss = 0
 ###########################################################################
 # User equipment body loss [dB]
 ue_body_loss = 4
 ###########################################################################
 # Downlink attenuation factor used in link-to-system mapping
-dl_attenuation_factor = 0.8
+dl_attenuation_factor = 0.6
 ###########################################################################
 # Downlink minimum SINR of the code set [dB]
 dl_sinr_min = -10
@@ -182,40 +183,25 @@ dl_sinr_max = 30
 #                                    "TVRO-URBAN"
 #                                    "TVRO-SUBURBAN"
 #                                    "ABG" (Alpha-Beta-Gamma)
-#                                    "P619"
-channel_model = P619
-###########################################################################
-# Parameters for the P.619 propagation model
-# For IMT NTN the model is used for calculating the coupling loss between
-# the BS space station and the UEs on Earth's surface.
-# For now, the NTN footprint is centered over the BS nadir point, therefore
-# the paramters imt_lag_deg and imt_long_diff_deg SHALL be zero.
-#    imt_altitude - altitude of IMT system (in meters)
-#    imt_lat_deg - latitude of IMT system (in degrees)
-#    imt_long_diff_deg -difference between longitudes of IMT and satellite system
-#      (positive if space-station is to the East of earth-station)
-#    season - season of the year.
-imt_altitude = 0
-imt_lat_deg = 0
-imt_long_diff_deg = 0
-season = SUMMER
+channel_model = UMi
 ###########################################################################
 # Adjustment factor for LoS probability in UMi path loss model.
 #       Original value: 18 (3GPP)
-los_adjustment_factor = 18
+los_adjustment_factor = 29
 ###########################################################################
 # If shadowing should be applied or not
 shadowing = TRUE
 ###########################################################################
 # System receive noise temperature [K]
 noise_temperature = 290
+BOLTZMANN_CONSTANT = 1.38064852e-23
 
 [IMT_ANTENNA]
 ###########################################################################
 # Defines the antenna model to be used in compatibility studies between
 # IMT and other services in adjacent band
 # Possible values: SINGLE_ELEMENT, BEAMFORMING
-adjacent_antenna_model = SINGLE_ELEMENT
+adjacent_antenna_model = BEAMFORMING
 ###########################################################################
 # If normalization of M2101 should be applied for BS
 bs_normalization = FALSE
@@ -243,25 +229,25 @@ bs_minimum_array_gain = -200
 ue_minimum_array_gain = -200
 ###########################################################################
 # mechanical downtilt [degrees]
-# NOTE: consider defining it to 90 degrees in case of indoor or NTN simulations
-bs_downtilt = 90
+# NOTE: consider defining it to 90 degrees in case of indoor simulations
+bs_downtilt = 10
 ###########################################################################
 # BS/UE maximum transmit/receive element gain [dBi]
 # default: bs_element_max_g = 5, for M.2101
 #                           = 15, for M.2292
 # default: ue_element_max_g = 5, for M.2101
 #                           = -3, for M.2292
-bs_element_max_g = 5
-ue_element_max_g = 5
+bs_element_max_g = 5.5
+ue_element_max_g = -4
 ###########################################################################
 # BS/UE horizontal 3dB beamwidth of single element [degrees]
-bs_element_phi_3db = 65
-ue_element_phi_3db = 90
+bs_element_phi_3db = 120
+ue_element_phi_3db = 360
 ###########################################################################
 # BS/UE vertical 3dB beamwidth of single element [degrees]
 # For F1336: if equal to 0, then beamwidth is calculated automaticaly
-bs_element_theta_3db = 65
-ue_element_theta_3db = 90
+bs_element_theta_3db = 120
+ue_element_theta_3db = 180
 ###########################################################################
 # BS/UE number of rows in antenna array
 bs_n_rows = 8
@@ -272,12 +258,12 @@ bs_n_columns = 8
 ue_n_columns = 4
 ###########################################################################
 # BS/UE array horizontal element spacing (d/lambda)
-bs_element_horiz_spacing = 0.5
-ue_element_horiz_spacing = 0.5
+bs_element_horiz_spacing = 0.46
+ue_element_horiz_spacing = 0.46
 ###########################################################################
 # BS/UE array vertical element spacing (d/lambda)
-bs_element_vert_spacing = 0.5
-ue_element_vert_spacing = 0.5
+bs_element_vert_spacing = 0.46
+ue_element_vert_spacing = 0.46
 ###########################################################################
 # BS/UE front to back ratio of single element [dB]
 bs_element_am = 30
@@ -297,7 +283,7 @@ ue_multiplication_factor = 12
 [HOTSPOT]
 ###########################################################################
 # Number of hotspots per macro cell (sector)
-num_hotspots_per_cell = 1
+num_hotspots_per_cell = 2
 ###########################################################################
 # Maximum 2D distance between hotspot and UE [m]
 # This is the hotspot radius
@@ -342,34 +328,10 @@ ue_indoor_percent = .95
 # Building class: "TRADITIONAL" or "THERMALLY_EFFICIENT"
 building_class = TRADITIONAL
 
-[NTN]
-
-# NTN Airborne Platform height (m)
-bs_height = 20000
-    
-# NTN cell radius in network topology [m]
-cell_radius = 90000
-    
-# NTN Intersite Distance (m). Intersite distance = Cell Radius * sqrt(3)
-intersite_distance = 155884
-    
-# Conducted power per element [dBm/bandwidth]
-bs_conducted_power = 37
-    
-# Backoff Power [Layer 2] [dB]. Allowed: 7 sector topology - Layer 2
-bs_backoff_power = 3
-    
-# NTN Antenna configuration
-bs_n_rows_layer1  = 2
-bs_n_columns_layer1 = 2
-bs_n_rows_layer2  = 4
-bs_n_columns_layer2 = 2
-
-
 [FSS_SS]
 ###########################################################################
 # satellite center frequency [MHz]
-frequency = 43000
+frequency = 6700
 ###########################################################################
 # satellite bandwidth [MHz]
 bandwidth = 200
@@ -730,11 +692,11 @@ EARTH_RADIUS = 6371000
 [RAS]
 ###########################################################################
 # x-y coordinates [m]
-x = 500000
+x = 53989.45
 y = 0
 ###########################################################################
 # antenna height [m]
-height = 15
+height = 25
 ###########################################################################
 # Elevation angle [deg]
 elevation = 45
@@ -743,19 +705,19 @@ elevation = 45
 azimuth = -90
 ###########################################################################
 # center frequency [MHz]
-frequency = 2695
+frequency = 10650
 ###########################################################################
 # bandwidth [MHz]
-bandwidth = 10
+bandwidth = 100
 ###########################################################################
 # Antenna noise temperature [K]
-antenna_noise_temperature = 25
+antenna_noise_temperature = 12
 ###########################################################################
 # Receiver noise temperature [K]
-receiver_noise_temperature = 65
+receiver_noise_temperature = 10
 ###########################################################################
 # adjacent channel selectivity (dB)
-adjacent_ch_selectivity = 20
+adjacent_ch_selectivity = 46
 ###########################################################################
 # Antenna efficiency
 antenna_efficiency = 1
@@ -779,7 +741,7 @@ SPEED_OF_LIGHT = 299792458
 # channel model, possible values are "FSPL" (free-space path loss),
 #                                    "TerrestrialSimple" (FSPL + clutter loss)
 #                                    "P452"
-channel_model = P619
+channel_model = P452
 ###########################################################################
 # P452 parameters
 ###########################################################################
@@ -821,23 +783,6 @@ polarization = horizontal
 ###########################################################################
 #determine whether clutter loss following ITU-R P.2108 is added (TRUE/FALSE)
 clutter_loss = TRUE
-# Parameters for the P.619 propagation model
-# Used between IMT space station and another terrestrial system.
-#    space_station_alt_m - altitude of IMT space station (BS) (in meters)
-#    earth_station_alt_m - altitude of the system's earth station (in meters)
-#    earth_station_lat_deg - latitude of the system's earth station (in degrees)
-#    earth_station_long_diff_deg - difference between longitudes of IMT space station and system's earth station
-#      (positive if space-station is to the East of earth-station)
-#    season - season of the year.
-# Enter the IMT space station heigh
-space_station_alt_m = 20000.0
-# Enter the RAS antenna heigh
-earth_station_alt_m = 15.0
-# The RAS station lat
-earth_station_lat_deg = -23.17889
-# This parameter is ignored as it will be calculated from x,y positions in run time
-earth_station_long_diff_deg = 0.0
-season = SUMMER
 
 [EESS_PASSIVE]
 ###########################################################################
